<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:textSize="30sp"
        android:text="@string/premiumTitle"
        android:textAlignment="center"
        android:textColor="@color/black_dark"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit1"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_bold"
            android:textSize="25sp"
            android:text="@string/premiumBenefit1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_light"
            android:layout_marginLeft="20dp"/>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPagar"
        style="@style/resultado_boton_convertir"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:fontFamily="@font/amaranth_bold"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>


</LinearLayout>